correction code après passage de PMD et de checkStyle
svn path=/java/trunk/; revision=3292